--- a/introduction.tex
+++ b/introduction.tex
@@ -4,7 +4,7 @@
 
 This dissertation is about case competition, a situation in which two cases are assigned but only one of them surfaces. One of the constructions in which case competition appears is relative clauses that lack a head, i.e. headless relatives.
 
-I show that one aspect about case competition in headless relatives holds for all languages (under discussion here at least). That is, there is a fixed order which decides which case wins the competition. Another aspect of case competition in headless relatives differs per language. That is, whether the competition takes place to begin with. I connect this variable to the morphology of the language in question.
+I show that one aspect about case competition in headless relatives holds for all languages (under discussion here at least). That is, there is a fixed order which decides which case wins the competition. I let this follow from what we observe in morphology. Another aspect of case competition in headless relatives differs per language. That is, whether the competition takes place to begin with. I connect this variable to the morphology of the language in question.
 
 This phenomenon has been described as some special property of a few special languages. Therefore, language-specific rules have been postulated to account for the data. My goal is to show that this phenomenon can be captured with `normal' syntactic processes, like ellipsis, c-command. The account makes predictions about how a language behaves based on the shape of its relative pronouns. And we see that the phenomenon is actually more wide-spread than what has been assumed.
 %%this is too difficult
@@ -16,10 +16,9 @@ In this introduction I first introduce what I mean exactly with case competition
 
 % First, case marks the grammatical role of the noun phrases. Case also appears on relative pronoun. Case on head can differ from case on relative pronoun. What happens if there is no noun? Two cases come together on the relative pronoun. What holds for all languages: there is a fixed order of who wins the competition. Specific from language to language: when does the competition take place?
 
-
-Languages can use case to mark the grammatical role of a noun phrase in a clause \citep[cf.][]{moravcsik2009}. Consider the two Modern German sentences in \ref{ex:german-case}. Subjects of the predicate \tit{mag} `likes' are marked as nominative, and objects of \tit{mag} `likes' are marked as accusative. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
-In \ref{ex:german-case-1}, \tit{der} in \tit{der Lehrer} `the teacher' appears in nominative case, because it is the subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' appears in accusative case, because it is an object of \tit{mag} `likes'.
-In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' appears in nominative case, because it is the subject in the clause. \tit{Den} in \tit{den Lehrer} `the teacher' appears in accusative case, because it is the object of \tit{mag} `likes'.
+Languages can use case to mark the grammatical role of a noun phrase in a clause \citep[cf.][]{moravcsik2009}. Consider the two Modern German sentences in \ref{ex:german-case}. What can descriptively be called subjects of the predicate \tit{mag} `likes' are marked as nominative. What can be described as objects of \tit{mag} `likes' are marked as accusative. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
+In \ref{ex:german-case-1}, \tit{der} in \tit{der Lehrer} `the teacher' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' appears in accusative case, because it is a descriptive object of \tit{mag} `likes'.
+In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Lehrer} `the teacher' appears in accusative case, because it is the descriptive object of \tit{mag} `likes'.
 
 \ex.\label{ex:german-case}
 \ag. Der Lehrer mag den Schüler.\\
@@ -30,7 +29,7 @@ In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit
  `the pupil likes the teacher.'\label{ex:german-case-2}
 
 Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:german-relatives}. These two sentences both contain of a main clause that is modified by a relative clause.
-In \ref{ex:german-relative-1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Den Schüler} `the pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\ac{nom}' appears in nominative case, because it is the subject of in the relative clause.
+In \ref{ex:german-relative-1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Den Schüler} `the pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the descriptive object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\ac{nom}' appears in nominative case, because it is the descriptive subject of in the relative clause.
 
 In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\ac{acc}' appears in accusative case, because it is the object of \tit{sucht} `searches' in the relative clause.
 
@@ -42,7 +41,7 @@ In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspi
  the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{acc} he {at the} {hide-and-seek game} searches\\
  `The teacher likes the pupil that he is searching for playing hide-and-seek.'\label{ex:german-relative-2}
 
-Compare the two sentences in \ref{ex:german-relatives}. In both sentences the head is marked as accusative because it is the object in the main clause. The case of the relative pronoun in \ref{ex:german-relative-2} is also accusative, because of it is the object in the relative clause. The case of the relative pronoun in \ref{ex:german-relative-1} is nominative, because it is the subject in the relative clause. So, the case of the relative pronoun in \ref{ex:german-relative-1} differs from the case of the head.
+Compare the two sentences in \ref{ex:german-relatives}. In both sentences the head is marked as accusative because it is the object in the main clause. The case of the relative pronoun in \ref{ex:german-relative-2} is also accusative, because of it is the object in the relative clause. The case of the relative pronoun in \ref{ex:german-relative-1} is nominative, because it is the descriptive subject in the relative clause. So, the case of the relative pronoun in \ref{ex:german-relative-1} differs from the case of the head.
 
 The focus of this dissertation lies on headless relatives. As the name suggests, this type of relative clause lacks a head.\footnote{
 This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is truly missing, it is absent, cf. \citealt{citko2005,vanriemsdijk2006}. Others claim that there is actually a head, but it is phonologically zero, \citealt{bresnan1978,groos1981,grosu2003}. At this point in the discussion this distinction is not relevant. I return to the issue in Chapter \ref{ch:connecting}.
@@ -94,7 +93,7 @@ The conclusion that follows is that the relative pronoun can take the external c
 The examples in \ref{ex:gothic-acc-dat} and \ref{ex:gothic-dat-acc} have shown that the relative pronoun in headless relatives can take either the internal or the external case. In the examples, the predicates (or preposition) take accusative and dative, and in both cases, the relative pronoun appeared in dative case. In other words, there was a competition between accusative and dative, and dative won.
 
 In the next section, I discuss the content of this dissertation. Before that, I comment on two notational conventions I use throughout this dissertation. First, I place subscripts on the glosses of the predicates. They indicate what the internal or external case is. The subscript on the predicate in the relative clause indicates the internal case. The subscript on the predicate in the main clause indicates the external case. This subscript can mean different things.
-For \tit{ushafjands} `picking up' \ref{ex:gothic-acc-acc} the subscript indicates which case the complement of the verb appears in. The subscript on \tit{taujau} `do' \ref{ex:gothic-dat-acc} in refers to the case of the indirect object of the predicate. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with, as for \tit{ana} `on' in \ref{ex:gothic-acc-dat}. A last possibility is that the subscript is [\ac{nom}] and refers to the case in which the descriptively called subject appears in, of which examples will emerge in the next chapter.
+For \tit{ushafjands} `picking up' \ref{ex:gothic-acc-acc} the subscript indicates which case the complement of the verb appears in. The subscript on \tit{taujau} `do' \ref{ex:gothic-dat-acc} in refers to the case of the indirect object of the predicate. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with, as for \tit{ana} `on' in \ref{ex:gothic-acc-dat}. A last possibility is that the subscript is [\ac{nom}] and refers to the case in what can be considered the subject appears in, of which examples will emerge in the next chapter.
 In other words, the subscript can refer several elements: a subject, object or indirect object of a predicate. There is no overarching theoretical notion that the subscript makes reference to. The subscript simply indicates which case is required within the (main or relative) clause.
 
 Second, I write the relative clause in gray. When the relative pronoun takes the internal case, I mark it in gray as well, as shown in \ref{ex:gothic-acc-dat}. When the relative pronoun takes the external case, I leave it black, indicating it patterns with the main clause. An example of that is \ref{ex:gothic-dat-acc}. When the internal and external case are the same, the relative pronoun should be black and gray. As this is impossible, I choose to mark it black, as shown in \ref{ex:gothic-acc-acc}.
