--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -177,25 +177,27 @@ The hierarchy is schematically represented in Figure \ref{fig:agr-sub-do-io}. It
 
 Then, there are four types of languages possible: first, a language that does not show any agreement; second, a language that shows agreement only with the subject and not with the direct and indirect object; third, a language that shows agreement with the subject and direct object but not with the indirect object; and fourth, a language that shows agreement with the subject, the direct object and the indirect object.
 
+The implicational hierarchy holds for languages, not for sentences. That is, it is not the case that in a language of a particular type all instances of the grammatical function show agreement. To be more precise, in a language of the second type, that only shows agreement with the subject, not all subjects have to show agreement. Particular types of subject, such as experiencer subjects often do not show any agreement.
+
 Mandarin Chinese is an example of a language that does not show any agreement on the predicate. An example is given in \ref{ex:chinese-agr}. The predicate \tit{gěi} `give' does not agree with the subject \tit{nǐ} `you', with the direct object \tit{shū} `book' or with the indirect object \tit{wǒ} `me'.
 
 \exg. Nǐ bǎ shū gěi wǒ-le.\\
  you ba book give me-\ac{asp}\\
  `You gave me the book.' \flushfill{Mandarin Chinese, Zheng Shen p.c.}\label{ex:chinese-agr}
 
-German is an example of a language that shows agreement with the subject of the clause. An example is given in \ref{ex:german-agr}. The predicate \tit{gibst} `give' contains the morpheme \tit{-st}. This morpheme is the agreement morpheme for second person singular subjects. The predicate \tit{gibst} `give' agrees in person and number with the subject \tit{du} `you'. There is no agreement with the direct object \tit{das Buch} `the book' or the indirect object \tit{mir} `me'.
+German is an example of a language that can show agreement with the subject of the clause. An example is given in \ref{ex:german-agr}. The predicate \tit{gibst} `give' contains the morpheme \tit{-st}. This morpheme is the agreement morpheme for second person singular subjects. The predicate \tit{gibst} `give' agrees in person and number with the subject \tit{du} `you'. There is no agreement with the direct object \tit{das Buch} `the book' or the indirect object \tit{mir} `me'.
 
 \exg. Du gib \tbf{-st} mir das Buch.\\
  you give -2\ac{sg} me the book\\
  `You give me the book.' \flushfill{German}\label{ex:german-agr}
 
-Hungarian is an example of a language that shows agreement with the subject and the direct object of a clause. An example is given in \ref{ex:hungarian-agr}. The predicate \tit{adom} `give' contains the morpheme \tit{-om}. This is a portmonteau morpheme for a first person singular subject and a third person object agreement. The predicate \tit{adom} `give' agrees with the subject \tit{én} `I' and the direct object \tit{a könyvet} `the book'. There is no agreement with the indirect object \tit{neked} `you'.
+Hungarian is an example of a language that can show agreement with the subject and the direct object of a clause. An example is given in \ref{ex:hungarian-agr}. The predicate \tit{adom} `give' contains the morpheme \tit{-om}. This is a portmonteau morpheme for a first person singular subject and a third person object agreement. The predicate \tit{adom} `give' agrees with the subject \tit{én} `I' and the direct object \tit{a könyvet} `the book'. There is no agreement with the indirect object \tit{neked} `you'.
 
 \exg. (Én) neked ad \tbf{-om} a könyv -et\\
  I you.\ac{dat}.\ac{sg} give -1\ac{sg}.\ac{subj}>3.\ac{obj} the book -\ac{acc}\\
  `I give you the book.' \flushfill{Hungarian, András Bárány p.c.}\label{ex:hungarian-agr}
 
-Basque is an example of language that shows agreement with the subject, the direct object and the indirect object. Basque is an ergative-absolutive language, so in transitive clauses subjects are marked as ergative and objects are marked as absolutive. An example from the Bizkaian dialect is given in \ref{ex:basque-agr}. The stem of the auxiliary \tit{aus} combines with the morphemes \tit{d-}, \tit{-ta} and \tit{-zu}. The morpheme \tit{d-} is the agreement morpheme for third person singular as direct objects, which is here \tit{liburua} `the book'. The morpheme \tit{-ta} is the agreement morpheme for first person singular indirect objects, which is here \tit{niri} `me'. The morpheme \tit{-zu} is the agreement morpheme for second person singular ergative subjects, which is here \tit{zuk} `you'.
+Basque is an example of language that can show agreement with the subject, the direct object and the indirect object. Basque is an ergative-absolutive language, so in transitive clauses subjects are marked as ergative and objects are marked as absolutive. An example from the Bizkaian dialect is given in \ref{ex:basque-agr}. The stem of the auxiliary \tit{aus} combines with the morphemes \tit{d-}, \tit{-ta} and \tit{-zu}. The morpheme \tit{d-} is the agreement morpheme for third person singular as direct objects, which is here \tit{liburua} `the book'. The morpheme \tit{-ta} is the agreement morpheme for first person singular indirect objects, which is here \tit{niri} `me'. The morpheme \tit{-zu} is the agreement morpheme for second person singular ergative subjects, which is here \tit{zuk} `you'.
 
 \exg. Zu-k ni-ri liburu-a emon \tbf{d} -aus \tbf{-ta} \tbf{-zu}.\\
  you-\ac{erg} me-\ac{dat} book-\ac{def}.\ac{abs} given \ac{abs}.3\ac{sg} -\ac{aux} -\ac{dat}.1\ac{sg} -\ac{erg}.2\ac{sg}\\
@@ -308,13 +310,13 @@ Relativization refers to the process in which a relative clause is derived from 
 \a. You like the woman. \label{ex:rel-non}
 \b. \tbf{the} \tbf{woman}, (who) you like \label{ex:rel-realati}
 
-In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It differ per language which elements can be relativized with a particular strategy. Again, it is not random with which elements can be relativized. Instead, there is a implicational hierarchy that is identical to the one observed for the case scale: \ac{nom} < \ac{acc} < \ac{dat}.
+In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It differs per language which elements can be relativized with a particular strategy. Just like the distribution was not random for agreement, it is not random which elements can be relativized. Instead, there is a implicational hierarchy that is identical to the one observed for the case scale: \ac{nom} < \ac{acc} < \ac{dat}.
 
 \citet{keenan1977} formulated the implicational hierarchy in terms of the grammatical functions subject, direct object and indirect object.\footnote{
 \citet{keenan1977} also included obliques, possessives and objects of comparison on the lowest end of the hierarchy. I leave them out here, because they are not relevant for the discussion.
 }
 
-The implicational hierarchy is schematically represented in Figure \ref{fig:relativization}. It should be read as follows: if a language allows relativization of a particular circle, it also allows relativization of the circle around it. The languages in the figure give examples of the circles they are in.
+The implicational hierarchy is schematically represented in Figure \ref{fig:relativization}. It should be read as follows: if a language allows a particular relativization strategy of the grammatical function in a particular circle, it also allows this relativization strategy of the grammatical function of the circle around it. The languages in the figure give examples of the circles they are in.
 
 \begin{figure}[H]
   \centering
@@ -338,18 +340,29 @@ The implicational hierarchy is schematically represented in Figure \ref{fig:rela
 There are four types of languages possible: first, a language that allows only the subject to be relativized with a particular strategy and not the direct and indirect object; second, a language that allows the subject and direct object to be relativized with a particular strategy but not the indirect object; and third, a language that allows the subject, the direct object and the indirect object to be relativized with a particular strategy.
 
 Malagasy is an example of a language that allows subjects to be relativized using a particular strategy, but not direct and indirect objects.\footnote{
-Later I draw the parallel between subject and nominative, direct object and accusative and indirect object and dative. However, Malagasy does not have any overt morphological system.
-Another instance of a relativization strategy in a particular language that only holds for subjects and not for direct and indirect objects is the participle construction in for instance German. It is possible to make subject constructions like this but not objects.
+Later I draw the parallel between subject and nominative, direct object and accusative and indirect object and dative \citep[after][]{caha2009}. As Malagasy does not have any overt morphological system, it does not hold that the subject corresponds to the nominative in this case.
+German is another example of a language that allows subjects to be relativized using a particular strategy, but not direct and indirect object. This strategy is the participle construction. \ref{ex:german-rel-decl} is an example of a declarative sentence in German. It is a transitive sentence that contains the subject \tit{die Frau} `the woman' and the object \tit{der Mann} `the man'.
 
-\exg. der in seinem Buro arbeitende \tbf{Mann}\\
- the in his study working man\\
- `the man who is working in his study'
- \z.
+\exg. Die Frau küsst den Mann.\\
+the woman kisses the man\\
+`The woman is kissing the man.' \flushfill{German}\label{ex:german-rel-decl}
 
-\phantom{x}
+In \ref{ex:german-rel-subj}, the subject from the declarative sentence is relativized. The predicate form the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the relative clause \tit{den Mann küssende} `the man kissing'. The relative clause directly precedes the noun of the subject, creating distance between the determiner \tit{die} `the' and \tit{Frau} `woman'.
 
-}
-\ref{ex:malagasy-decl} is an example of a declarative sentence in Malagasy. It is a transitive that contains the subject \tit{ny mpianatra} `the student' and the direct object \tit{ny vehivavy} `the woman'.
+\exg. \tbf{die} den Mann küssende \tbf{Frau}\\
+ the the man kissing woman\\
+ `the woman who is kissing the man' \flushfill{German}\label{ex:german-rel-subj}
+
+The object of \ref{ex:german-rel-decl} cannot be relativized in the same way, as shown in \ref{ex:german-rel-no-do}. Again, the predicate form the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the relative clause \tit{die Frau küssende} `the woman kissing'. The relative clause directly precedes the noun of the object, creating distance between the determiner \tit{der} `the' and \tit{Mann} `man'. This example is ungrammatical.
+
+\exg. \tbf{den} die Frau küssende \tbf{Mann}\\
+ the the woman kissing man\\
+ `the man who is kissing the woman' \flushfill{German}\label{ex:german-rel-no-do}
+\z.
+
+\phantom{x}}
+
+\ref{ex:malagasy-decl} is an example of a declarative sentence in Malagasy. It is a transitive sentence that contains the subject \tit{ny mpianatra} `the student' and the direct object \tit{ny vehivavy} `the woman'.
 
 \exg. Nahita ny vehivavy ny mpianatra.\\
  saw the woman the student\\
